Added ECCServer and DataRouter classes.

--- a/attpcdaq/templates/daq/add_or_edit_item.html
+++ b/attpcdaq/templates/daq/add_or_edit_item.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Add data source - AT-TPC DAQ{% endblock %}
+{% block title %}Add / Update - AT-TPC DAQ{% endblock %}
 
 {% block body %}
 <div class="container">
