--- a/attpcdaq/templates/base.html
+++ b/attpcdaq/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}AT-TPC DAQ{% endblock %}</title>
 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/flatly.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
 </head>
 <body>
