--- a/attpcdaq/static/css/site.css
+++ b/attpcdaq/static/css/site.css
@@ -1,4 +1,37 @@
 #run-control-toolbar {
-    display: inline-block;
+  display: inline-block;
 }
-
+.navbar {
+  border-radius: 0;
+}
+.sidebar {
+  position: fixed;
+  top: 60px;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: block;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  /* Scrollable contents if viewport is shorter than content. */
+  background-color: #ecf0f1;
+  border-right: 1px solid #eee;
+}
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px;
+  /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar .active a,
+.nav-sidebar .active a:hover,
+.nav-sidebar .active a:active {
+  color: #fff;
+  background-color: #428bca;
+}
