--- a/attpcdaq/templates/base.html
+++ b/attpcdaq/templates/base.html
@@ -9,6 +9,10 @@
 
     <link rel="stylesheet" href="{% static 'css/flatly.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
+
+    <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+
+    {% block scripts %}{% endblock %}
 </head>
 <body>
     {% block navbar %}
