--- a/attpcdaq/templates/daq/status.html
+++ b/attpcdaq/templates/daq/status.html
@@ -3,22 +3,11 @@
 
 {% block title %}Status - AT-TPC DAQ{% endblock %}
 
-{#{% block breadcrumbs %}#}
-{#<div class="container">#}
-{#    <ol class="breadcrumb">#}
-{#        <li class="active">Home</li>#}
-{#    </ol>#}
-{#</div>#}
-{#{% endblock %}#}
-
 {% block body %}
-
-
     <div class="panel panel-default">
         <div class="panel-heading">
             DAQ Status
         </div>
-
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-8">
@@ -59,26 +48,20 @@
                 <td><span class="label label-default">{{ source.state_name }}</span></td>
                 <td>{{ source.config }}</td>
                 <td class="text-right">
-                    <div class="btn-toolbar" id="run-control-toolbar">
-            {#        <div class="btn-group">#}
-                        <a class="btn btn-xs btn-info"
-                           href="{% url 'daq/source_change_state' source.pk source.CONFIGURED %}">
+                    <div class="btn-toolbar" id="{{ source.name }}-source-controls">
+                        <button class="btn btn-xs btn-info" data-pk="{{ source.pk }}" data-target="{{ source.CONFIGURED }}">
                             <span class="glyphicon glyphicon-off"></span>
-                        </a>
-                        <a class="btn btn-xs btn-success"
-                           href="{% url 'daq/source_change_state' source.pk source.RUNNING %}">
+                        </button>
+                        <button class="btn btn-xs btn-success" data-pk="{{ source.pk }}" data-target="{{ source.RUNNING }}">
                             <span class="glyphicon glyphicon-play"></span>
-                        </a>
-                        <a class="btn btn-xs btn-danger"
-                           href="{% url 'daq/source_change_state' source.pk source.CONFIGURED %}">
+                        </button>
+                        <button class="btn btn-xs btn-danger" data-pk="{{ source.pk }}" data-target="{{ source.CONFIGURED }}">
                             <span class="glyphicon glyphicon-stop"></span>
-                        </a>
-                        <a class="btn btn-xs btn-warning"
-                           href="{% url 'daq/source_change_state' source.pk source.IDLE %}">
+                        </button>
+                        <button class="btn btn-xs btn-warning" data-pk="{{ source.pk }}" data-target="{{ source.IDLE }}">
                             <span class="glyphicon glyphicon-repeat"></span>
-                        </a>
-    {#        </div>#}
-        </div>
+                        </button>
+                    </div>
                 </td>
             </tr>
             {% endfor %}
@@ -86,4 +69,20 @@
     </div>
 
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function() {
+        // Set up the control buttons
+        $("div[id*='source-controls'] > button").click(function () {
+            var pk = $(this).data('pk');
+            var target = $(this).data('target');
+            $.post("{% url 'daq/source_change_state' %}", {pk: pk, target_state: target, csrfmiddlewaretoken: '{{ csrf_token }}'},
+                    function (data) {
+                        console.log(data);
+                    });
+        });
+    });
+</script>
 {% endblock %}
