--- a/attpcdaq/templates/base.html
+++ b/attpcdaq/templates/base.html
@@ -8,9 +8,11 @@
     <title>{% block title %}AT-TPC DAQ{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'css/flatly.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/site.css' %}">
 
     <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     {% block scripts %}{% endblock %}
 </head>
